...
}

- (NSArray *)demos {
    return @[
             [[IGDemoItem alloc] initWithName:@"Tail Loading" controller:[[IGLoadMoreViewController alloc] init]],
             [[IGDemoItem alloc] initWithName:@"Search Autocomplete" controller:[[IGSearchViewController alloc] init]],
             [[IGDemoItem alloc] initWithName:@"Mixed Data" controller:[[IGMixedDataViewController alloc] init]],
             [[IGDemoItem alloc] initWithName:@"Nested Adapter" controller:[[IGNestedAdapterViewController alloc] init]],
             [[IGDemoItem alloc] initWithName:@"Empty View" controller:[[IGEmptyViewController alloc] init]]
             ];
}

@end
...
